<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="facebook_app_id" translatable="false">201826287505269</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb201826287505269</string>

    <string name="server_client_id" translatable="false">364205543335-cr273fmgdc9n2uqfkrlb6075uid84eht.apps.googleusercontent.com</string>

    <string name="app_name" translatable="false">Gomlgy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="image">Image</string>


    <string name="account_information">Account Information</string>
    <string name="save">Save</string>
    <string name="address_is_required">Address is required</string>
    <string name="city_is_required">City is required</string>
    <string name="postal_code_is_required">Postal code is required</string>
    <string name="country_is_required">Country is required</string>
    <string name="phone_number_is_required">Phone number is required</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="name_is_required">Name is required</string>
    <string name="adding_item_to_your_shopping_cart_please_wait">Adding item to your shopping cart. Please wait.</string>
    <string name="this_variant_of_this_product_isnt_available_now">This variant of this product isn\'t available now</string>
    <string name="my_account">My Account</string>
    <string name="login_canceled">Login canceled</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_bids">My Bids</string>
    <string name="your_bid_is_being_submitted_please_wait">Your bid is being submitted. Please wait.</string>
    <string name="your_bidding_amount_must_be_greater_than_the_current_bid">Your bidding amount must be greater than the current bid</string>
    <string name="please_select_a_payment_method">Please select a payment method</string>
    <string name="please_enter_coupon_code_first">Please enter coupon code first</string>
    <string name="checkout_with_PayPal">Checkout with PayPal</string>
    <string name="checkout_with_card">Checkout with Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="checkout_is_processing_please_wait">Checkout is processing. Please wait.</string>
    <string name="this_product_doesnt_have_any_buying_options">This product doesn\'t have any buying options.</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="purchase_history">Purchase History</string>
    <string name="order_details">Order Details</string>
    <string name="flat_shipping_rate">Flat Shipping Rate</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required_and_must_be_6_characters_at_least">Password is required and must be 6 characters at least</string>
    <string name="confirm_password_mismatch_with_password">Confirm password mismatch with password</string>
    <string name="shipping_nformation">Shipping Information</string>
    <string name="please_choose_shipping_address">Please choose shipping address.</string>
    <string name="card_payment">Card Payment</string>
    <string name="please_wait_your_transaction_is_processing">Please wait. Your transaction is processing.</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="sign_or_register">SIGN IN / REGISTER</string>
    <string name="_bids">" Bids"</string>
    <string name="_sold">" sold"</string>
    <string name="data_">"Date - "</string>
    <string name="payment_status_">"Payment Status - "</string>
    <string name="profile_information">Profile Information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="sign_in">SING IN</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="no_bids_found">No bids found</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="apply_coupon">"Apply Coupon"</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_my_order">PLACE MY ORDER</string>
    <string name="buying_options">Buying Options</string>
    <string name="specification">Specification</string>
    <string name="reviews">Reviews</string>
    <string name="seller_policy">Seller Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="support_policy">Support Policy</string>
    <string name="products_you_might_also_like">Products you might also like</string>
    <string name="top_selling_products_from_this_seller">Top selling products from this seller</string>
    <string name="no_products_found">No products found</string>
    <string name="no_reviews_found">No reviews found</string>
    <string name="no_purchase_history_found">No purchase history found</string>
    <string name="order_code">Order Code</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="order_date">Order Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_status">Payment Status</string>
    <string name="status">Status</string>
    <string name="amount">Amount</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="ordered_products">Ordered Products</string>
    <string name="sub_total">SUB TOTAL</string>
    <string name="tax">TAX</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="discount">DISCOUNT</string>
    <string name="grand_total">GRAND TOTAL</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">Confirm</string>
    <string name="featured_products">Featured Products</string>
    <string name="top_selling_products">Top Selling Products</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="view_all_products_from_this_store">View all products from this store</string>
    <string name="proceed_to_payment">PROCEED TO PAYMENT</string>
    <string name="coupon_discount">COUPON DISCOUNT</string>
    <string name="enter_your_credit_or_debit_card_information_to_complete_the_checkout_and_place_your_order">Enter your credit or debit card information to complete the checkout and place your order</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="wallet_recharge_history">Wallet Recharge History</string>
    <string name="variant">Variant</string>
    <string name="price">Price</string>
    <string name="shipping">Shipping</string>
    <string name="wishlist">Wishlist</string>
    <string name="logout">Logout</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="featured_categories">Featured Categories</string>
    <string name="flash_deal">Flash Deal</string>
    <string name="todays_deal">Today\'s Deal</string>
    <string name="best_selling">Best Selling</string>
    <string name="our_popular_brands">Our Popular Brands</string>
    <string name="auction_products">Auction Products</string>
    <string name="your_bid_was">Your bid was</string>
    <string name="place_bid">PLACE BID</string>
    <string name="product_name">Product Name</string>
    <string name="pending">Pending</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancelled">Cancelled</string>
    <string name="unpaid">Unpaid</string>
    <string name="method">Method</string>
    <string name="approval">Approval</string>
    <string name="all_categories">All Categories</string>
    <string name="cart">Cart</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="choose_Language">Choose Language</string>
    <string name="new_password">New Password</string>
    <string name="send_code">Send Code</string>
    <string name="see_all">See All</string>
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="what_are_you_looking_for">what are you looking for?</string>
    <string name="choose_a_shipping_address">Choose a shipping address</string>
    <string name="piece">Piece</string>
    <string name="choose_the_type_of_product">Choose the type of product</string>
    <string name="quantity">quantity</string>
    <string name="all_products">All products</string>
    <string name="filter">Filter</string>
    <string name="popularity">Popularity</string>
    <string name="title">title</string>
    <string name="url" translatable="false">url</string>
    <string name="brand">Brand</string>
    <string name="price_egp">Price (EGP)</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="apply">Apply</string>
    <string name="category_id" translatable="false">categoryId</string>
    <string name="sub_category_id" translatable="false">subCategoryId</string>
    <string name="enter_less_than" translatable="false">please enter less than</string>
    <string name="enter_more" translatable="false">Please enter more than</string>
    <string name="clear">Clear</string>
    <string name="cables">Cables</string>
    <string name="headphone">Headphone</string>
    <string name="cover">cover</string>
    <string name="glass_protector">Glass protector</string>
    <string name="acc_" translatable="false">himahamed999@gmail.com</string>
    <string name="pass_" translatable="false">01126545826</string>
    <string name="warranty">Warranty</string>
    <string name="warranty_start">Warranty start</string>
    <string name="warranty_end">Warranty end</string>
    <string name="code_">Code</string>
    <string name="admin_approval">Admin approval</string>
    <string name="unconfirmed">unconfirmed</string>
    <string name="confirmed">Confirmed</string>
    <string name="send_request">Send request</string>
    <string name="reason">Reason</string>
    <string name="send">Send</string>
    <string name="my_purchases">My purchases</string>
    <string name="enter_the_reason">Enter the reason</string>
    <string name="ediit">Edit</string>
    <string name="success">Success</string>
    <string name="faild">Faild</string>
    <string name="there_are_no_requests">There are no requests</string>
    <string name="available">Available</string>
    <string name="join_as_a_trader">Join as a trader</string>
    <string name="fatwora">Fatwora</string>
    <string name="total">total</string>
    <string name="color">Color</string>
    <string name="model">model</string>
</resources>
