<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/color_lbl_tv"
                style="@style/buy_data_header_tv"
                android:text="@string/color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gl_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/gl_1"
                style="@style/buy_data_header_view"
                app:layout_constraintHorizontal_bias="0.25"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/model_tv"
                style="@style/buy_data_header_tv"
                android:text="@string/model"
                app:layout_constraintEnd_toStartOf="@+id/gl_2"
                app:layout_constraintStart_toStartOf="@+id/gl_1"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/gl_2"
                style="@style/buy_data_header_view"
                app:layout_constraintHorizontal_bias="0.50"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/quantity_tv"
                style="@style/buy_data_header_tv"
                android:text="@string/quantity"
                app:layout_constraintEnd_toStartOf="@+id/gl_3"
                app:layout_constraintStart_toStartOf="@+id/gl_2"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/gl_3"
                style="@style/buy_data_header_view"
                app:layout_constraintHorizontal_bias="0.75"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/price_tv"
                style="@style/buy_data_header_tv"
                android:text="@string/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/gl_3"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_bottom"
            android:layout_width="@dimen/width_0"
            android:layout_height="0.5dp"
            android:background="@color/lightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>