<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="1dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/order_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/order_code"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_code"
            android:text="@string/order_date"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/payment_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_date"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/payment_status"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>