<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Presentation.ui.activities.impl.StripePaymentActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cart_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_total"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/sub_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="$1500"
                    android:textColor="#fff"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tax"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="$1500"
                    android:textColor="#fff"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping_cost"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="$1500"
                    android:textColor="#fff"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_discount"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/coupon_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="$1500"
                    android:textColor="#fff"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grand_total"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/grand_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="$1500"
                    android:textColor="#fff"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_summary"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/cardInputWidgetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_your_credit_or_debit_card_information_to_complete_the_checkout_and_place_your_order"
                android:textColor="#000"
                android:textSize="16sp"/>

            <com.stripe.android.view.CardInputWidget
                android:id="@+id/cardInputWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardInputWidgetText"
                android:layout_marginTop="10dp"
                app:shouldShowPostalCode="false" />

            <Button
                android:id="@+id/payButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardInputWidget"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/confirm_payment"
                android:textColor="#fff"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>