<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/product_variant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginStart="10dp"
            android:text="@string/variant"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/product_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:layout_toEndOf="@id/product_variant"
            android:text="0"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/delivery_status"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_variant"
            android:layout_marginStart="10dp"
            android:text="@string/pending"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_variant"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:layout_toEndOf="@id/delivery_status"
            android:text="0"
            android:textColor="@color/colorPrimary"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>